Fix an issue where the profile menu could become enormous
Summary: Ref T10054. Without `max-width`, Safari can make this too large with a long project name (maybe because of `table-cell`?).

Test Plan: Saw normal-width menu instead of huge menu on very long project.

Reviewers: chad

Reviewed By: chad

Maniphest Tasks: T10054

Differential Revision: https://secure.phabricator.com/D15046

--- a/webroot/rsrc/css/phui/phui-profile-menu.css
+++ b/webroot/rsrc/css/phui/phui-profile-menu.css
@@ -17,7 +17,9 @@
   position: relative;
   vertical-align: top;
   width: 240px;
+  max-width: 240px;
   margin-top: 0;
+  overflow: hidden;
 }
 
 .device-desktop .phui-profile-menu .phabricator-nav-content {
